Newest updates,Beta1 of html and js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,39 @@
     </head>
 
       <body>
-          <script src="app.js"></script>
+        <h1>The extended elevator about me discription</h1>
+          <h2>Bio:</h2>
+            <p>
+              I grew up in Seattle, WA. So, I am one of the few natives you will ever meet in Seattle. Most of my work related skills<br> have been in the hospitality industry,
+              which has give me so many skills in relating to many different people, thinking on my feet, and anticipating needs.
+            </p>
+          <h2>Training/Education:</h2>
+            <p>I've spent time learning coding on code academy particutlarly:
+              <ul>
+                  <li>JavaScript</li>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>Terminal</li>
+                  <li>Git</li>
+                </ul>
+              currently I am gaining skills and education through a boot camp with <a href= "https://www.codefellows.org/"> Code Fellows </a>
+              and will be learning:
+              <ul>
+                <li>HTML5 and CSS3</li>
+                <li>Object-Oriented Programing</li>
+                <li>Introductory Data Structures and Algorithms</li>
+                <li>DOM</li>
+                <li>Page Layout</li>
+                <li>GitHub Teams</li>
+              </ul>
+            </p>
+
+          <h2>Hobbies:</h2>
+            <p>
+              Most of my extra time I dedicate towards my family. I have three kids <em>Josiah, Gabriel, and Malina</em>, which enables me to play fun games!
+              We buid things, make puzzles, read together, cook, working in the garden, and laugh a lot!
+            </p>
+
+        <script src="app.js"></script>
       </body>
   </html>
