Fixed counters for correct score and counter for question 5 and 6. Also, updated console logs to reflect better debugging. Lastly, pruned overall structure of code.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <html>
     <head>
         <title>About Me </title>
+        <link rel="stylesheet" type="text/css" href="css-about-me.css">
     </head>
 
       <body>
@@ -12,7 +13,7 @@
               which has give me so many skills in relating to many different people, thinking on my feet, and anticipating needs.
             </p>
           <h2>Training/Education:</h2>
-            <p>I've spent time learning coding on code academy particutlarly:
+            <p class="medGreen">I've spent time learning coding on code academy particutlarly:
               <ul>
                   <li>JavaScript</li>
                   <li>HTML</li>
