added CSS styling to about-me project, also some new html tags.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+S<!DOCTYPE html>
   <html>
     <head>
         <title>About Me </title>
@@ -6,14 +6,16 @@
     </head>
 
       <body>
-        <h1>The extended elevator about me discription</h1>
-          <h2>Bio:</h2>
-            <p>
-              I grew up in Seattle, WA. So, I am one of the few natives you will ever meet in Seattle. Most of my work related skills<br> have been in the hospitality industry,
+      <div>
+      <h1>A short discription of my work experience and training.</h1>
+      </div>
+        <h2>Bio:</h2>
+            <p id ="Bio">
+              I grew up in <a href = "https://en.wikipedia.org/wiki/Seattle"> Seattle, WA.</a> So, I am one of the few natives you will ever meet in Seattle. Most of my work related skills<br> have been in the hospitality industry,
               which has give me so many skills in relating to many different people, thinking on my feet, and anticipating needs.
             </p>
-          <h2>Training/Education:</h2>
-            <p class="medGreen">I've spent time learning coding on code academy particutlarly:
+        <h2>Training/Education:</h2>
+            <p class="ColorParagrah"> I've spent time learning coding on code academy particutlarly:
               <ul>
                   <li>JavaScript</li>
                   <li>HTML</li>
@@ -34,10 +36,24 @@
             </p>
 
           <h2>Hobbies:</h2>
-            <p>
+            <p id ="Hobbies">
               Most of my extra time I dedicate towards my family. I have three kids <em>Josiah, Gabriel, and Malina</em>, which enables me to play fun games!
               We buid things, make puzzles, read together, cook, working in the garden, and laugh a lot!
             </p>
+
+          <h2> 2016 Goals:</h2>
+            <ol>
+              <li>Find employment in technology field</li>
+              <li>Spend an hour a week developing programing skills</li>
+              <li>Go on a family vacation to Great Wolf Lodge</li>
+              <li>Go on a mini vation with just my wife.</li>
+              <li>Read a new Sci-fi book this year</li>
+              <li>Take my boys on their first hike this Summer</li>
+              <li>Learn how to make my own pickled vegetables</li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
 
         <script src="app.js"></script>
       </body>
